# sh

./: AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release-rust.yml
crates/sh-core/: Cargo.toml
crates/sh-core/src/: editor.rs  git.rs  lib.rs  tmux.rs
crates/sh-py/: Cargo.toml
crates/sh-py/src/: lib.rs
py/dkdc_sh/: __init__.py  core.pyi
tests/: test_sh.py
