[project]
name = "dkdc-sh"
version = "0.1.0"
description = "Shell utilities for tmux, git, and command management"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "ty>=0.0.19", "pytest>=8"]

[tool.maturin]
module-name = "dkdc_sh.core"
python-packages = ["dkdc_sh"]
python-source = "py"
manifest-path = "crates/sh-py/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "crates/sh-core/**/*.rs" },
    { file = "crates/sh-py/**/*.rs" },
    { file = "py/dkdc_sh/**/*.py" },
]
